--- a/src/app/modules/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/cash-register-details.component.html
+++ b/src/app/modules/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/cash-register-details.component.html
@@ -4,6 +4,9 @@
   <app-header-stats [reports]="reports" (open)="openModal()" />
   <app-cashier-hour-stats [cashier]="cashier" [details]="details" />
   <hr class="divider mt-2.5 mb-5" />
-  <app-cashier-some-stats [reports]="reports" />
+  <div class="flex items-start justify-between gap-3 w-full">
+    <app-cashier-some-stats [reports]="reports" class="w-full" />
+    <app-cashier-observations [details]="details" class="w-full" />
+  </div>
 </ng-template>
 <app-cash-register-details-modal [reports]="detailedReports" />
