--- a/src/app/modules/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/cash-register-details.component.html
+++ b/src/app/modules/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/cash-register-details.component.html
@@ -7,6 +7,10 @@
   <div class="flex items-start justify-between gap-3 w-full">
     <app-cashier-some-stats [reports]="reports" class="w-full" />
     <app-cashier-observations [details]="details" class="w-full" />
+    <app-cashier-discrepancy
+      [discrepancy]="reports?.discrepancy"
+      class="w-full"
+    />
   </div>
 </ng-template>
 <app-cash-register-details-modal [reports]="detailedReports" />
