--- a/src/app/modules/admin/pages/movements/pages/safe-movements/safe-movements.component.html
+++ b/src/app/modules/admin/pages/movements/pages/safe-movements/safe-movements.component.html
@@ -10,6 +10,7 @@
     <li *ngFor="let detail of details()">
       <article
         class="card text-gray-700 hover:scale-[1.02] duration-200 cursor-pointer"
+        (click)="openModal(detail.id)"
       >
         <h3 class="text-2xl text-center font-medium mb-3">
           {{ detail.createdDate | date : "dd/MM/yyyy" }}
@@ -30,3 +31,4 @@
     </li>
   </ul>
 </ng-template>
+<app-safe-movements-modal [movement]="selectedMovement" />
