feat: safe movements table and link data through a service

--- a/src/app/modules/admin/pages/movements/pages/safe-movements/components/safe-movements-modal/safe-movements-modal.component.html
+++ b/src/app/modules/admin/pages/movements/pages/safe-movements/components/safe-movements-modal/safe-movements-modal.component.html
@@ -16,4 +16,7 @@
       X
     </button>
   </header>
+  <div class="h-[70%] overflow-y-auto">
+    <app-safe-movements-table />
+  </div>
 </dialog>
