--- a/src/app/modules/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/components/header-stats/header-stats.component.html
+++ b/src/app/modules/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/components/header-stats/header-stats.component.html
@@ -5,24 +5,31 @@
   <h2
     class="text-2xl text-gray-600 font-medium uppercase flex items-center justify-between mb-3"
   >
-    Caja Registradora N°
-    {{ reports?.cashRegisterDetail?.cashRegister?.numeral ?? 0 }}
+    Caja Registradora N° {{ numeral }}
     <span>{{
-      reports?.cashRegisterDetail?.createdDate | date : "dd/MM/yyyy hh:mm a"
+      movement()?.reports?.cashRegisterDetail?.createdDate
+        | date : "dd/MM/yyyy hh:mm a"
     }}</span>
   </h2>
   <div class="flex items-center justify-between">
     <app-stat-card
       stat="Depósitos"
-      [value]="reports?.deposits ?? 0"
+      [value]="movement()?.reports?.deposits ?? 0"
       color="green"
     />
     <app-stat-card
       stat="Retiros"
-      [value]="reports?.withdrawals ?? 0"
+      [value]="movement()?.reports?.withdrawals ?? 0"
       color="red"
     />
-    <app-stat-card stat="Extras" [value]="reports?.earnings" color="green" />
-    <app-stat-card stat="Saldo en Caja" [value]="reports?.balance ?? 0" />
+    <app-stat-card
+      stat="Extras"
+      [value]="movement()?.reports?.earnings"
+      color="green"
+    />
+    <app-stat-card
+      stat="Saldo en Caja"
+      [value]="movement()?.reports?.balance ?? 0"
+    />
   </div>
 </header>
