--- a/src/app/modules/admin/pages/movements/movements.component.html
+++ b/src/app/modules/admin/pages/movements/movements.component.html
@@ -2,7 +2,7 @@
 <ng-template #page>
   <app-header-title
     hTitle="Movimientos"
-    hDescription="Aquí podrás ver detalladamente todos los movimientos de todos tus productos disponibles y generar reportes en formato PDF"
+    hDescription="Aquí podrás ver detalladamente todos los movimientos de todos tus productos disponibles"
   />
   <div class="flex items-start justify-center gap-10">
     <app-rounded-section headline="Productos">
