--- a/src/app/modules/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/components/cash-register-details-modal/cash-register-details-modal.component.html
+++ b/src/app/modules/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/components/cash-register-details-modal/cash-register-details-modal.component.html
@@ -4,8 +4,7 @@
 >
   <header class="mb-4 border-b border-gray-400 pb-4 grid grid-cols-3">
     <h2 class="text-center text-gray-800 text-3xl font-medium col-start-2">
-      Caja Registradora N°
-      {{ 0 }}
+      Caja Registradora N° {{ numeral }}
     </h2>
     <button
       type="button"
