--- a/src/app/modules/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/components/hour-stat/hour-stat.component.html
+++ b/src/app/modules/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/components/hour-stat/hour-stat.component.html
@@ -6,7 +6,7 @@
     {{ time | date : "hh:mm a" }}
   </ng-container>
   <span
-    class="w-48 bg-gray-800 text-white text-center text-sm uppercase font-medium rounded-xl py-2 absolute z-10 top-[125%] left-[50%] -ml-24 invisible group-hover:visible"
+    class="w-48 bg-gray-800 text-white text-center text-sm uppercase font-medium rounded-xl py-2 absolute z-10 top-[125%] left-[50%] -ml-24 invisible opacity-0 group-hover:visible group-hover:opacity-100 transition-opacity duration-300"
     >{{ tooltip }}</span
   >
 </div>
