--- a/src/app/modules/admin/pages/administration/pages/cash-registers/cash-registers.component.html
+++ b/src/app/modules/admin/pages/administration/pages/cash-registers/cash-registers.component.html
@@ -3,47 +3,66 @@
     No se encontraron jornadas activas o cajas pendientes por cerrar
   </p>
 </ng-template>
-<ul
-  class="grid grid-cols-[repeat(auto-fit,_minmax(16rem,_1fr))] gap-5"
-  *ngIf="length() > 0; else noDetails"
->
-  <li
-    *ngFor="
-      let detail of cashRegisterDetails()?.currentCashRegisters;
-      index as i
-    "
+<ng-template #loadingPage><app-loading /></ng-template>
+<ng-container *ngIf="!loading(); else loadingPage">
+  <ul
+    class="grid grid-cols-[repeat(auto-fit,_minmax(16rem,_1fr))] gap-5"
+    *ngIf="length() > 0; else noDetails"
   >
-    <app-adm-item-card
-      [showDropdown]="currentIndex() === i"
-      [options]="options"
-      [finalBalance]="
-        detail.finalBase! > 0 ? detail.finalBase! : detail.initialBase
+    <li
+      *ngFor="
+        let detail of cashRegisterDetails()?.currentCashRegisters;
+        index as i
       "
-      [status]="detail.cashRegister.status"
-      (setSelectedItem)="setSelectedCashRegisterDetail(i, false)"
-      class="dropdown"
-      >Caja {{ detail.cashRegister.numeral }}</app-adm-item-card
     >
-  </li>
-  <li
-    *ngFor="
-      let detail of cashRegisterDetails()?.pendingCashRegisters;
-      index as i
-    "
-  >
-    <app-adm-item-card
-      [showDropdown]="pendingIndex() === i"
-      [options]="pendingOptions"
-      [finalBalance]="
-        detail.finalBase! > 0 ? detail.finalBase! : detail.initialBase
+      <app-adm-item-card
+        [showDropdown]="currentIndex() === i"
+        [options]="options"
+        [finalBalance]="
+          detail.finalBase! > 0 ? detail.finalBase! : detail.initialBase
+        "
+        [status]="detail.cashRegister.status"
+        (setSelectedItem)="setSelectedCashRegisterDetail(i, 'current')"
+        class="dropdown"
+        >Caja {{ detail.cashRegister.numeral }}</app-adm-item-card
+      >
+    </li>
+    <li
+      *ngFor="
+        let detail of cashRegisterDetails()?.pendingCashRegisters;
+        index as i
       "
-      [pending]="true"
-      (setSelectedItem)="setSelectedCashRegisterDetail(i, true)"
-      class="pending-dropdown"
-      >Caja {{ detail.cashRegister.numeral }}</app-adm-item-card
     >
-  </li>
-</ul>
+      <app-adm-item-card
+        [showDropdown]="pendingIndex() === i"
+        [options]="pendingOptions"
+        [finalBalance]="
+          detail.finalBase! > 0 ? detail.finalBase! : detail.initialBase
+        "
+        [pending]="true"
+        (setSelectedItem)="setSelectedCashRegisterDetail(i, 'pending')"
+        class="pending-dropdown"
+        >Caja {{ detail.cashRegister.numeral }}</app-adm-item-card
+      >
+    </li>
+    <li
+      *ngFor="
+        let detail of cashRegisterDetails()?.remainingCashRegisters;
+        index as i
+      "
+    >
+      <app-adm-item-card
+        [showDropdown]="remainingIndex() === i"
+        [options]="options"
+        [finalBalance]="detail.finalBase ?? 0"
+        (setSelectedItem)="setSelectedCashRegisterDetail(i, 'remaining')"
+        class="remaining-dropdown"
+      >
+        Caja {{ detail.cashRegister.numeral }}
+      </app-adm-item-card>
+    </li>
+  </ul>
+</ng-container>
 <app-update-cash-register-base-modal
   [cashRegisterDetail]="selectedCashRegisterDetail()"
   [timeForm]="timeForm"
