update: cash register bases logic between components. in progress: fix base bug and develop updating base logic

--- a/src/app/modules/admin/pages/administration/pages/cash-registers/cash-registers.component.html
+++ b/src/app/modules/admin/pages/administration/pages/cash-registers/cash-registers.component.html
@@ -63,8 +63,8 @@
     </li>
   </ul>
 </ng-container>
-<app-update-cash-register-base-modal
-  [cashRegisterDetail]="selectedCashRegisterDetail()"
+<app-update-cash-register-base-modal (onSubmit)="updateCashRegisterBase()" />
+<app-close-cash-register-base-modal
   [timeForm]="timeForm"
   (onSubmit)="closeCashRegisterDetail()"
 />
