--- a/src/app/modules/shared/components/custom-table/custom-table.component.html
+++ b/src/app/modules/shared/components/custom-table/custom-table.component.html
@@ -39,12 +39,26 @@
             'text-right': header.align === 'right'
           }"
         >
-          {{
+          <ng-container *ngIf="header.key; else actions">{{
             getNestedValue(row, header.key, {
               defaultValue: "--",
               prefixSign: header.prefixSign
             }) | dynamic : header.pipe : header.pipeArgs ?? "default"
-          }}
+          }}</ng-container>
+          <ng-template #actions>
+            <span class="flex items-center justify-center gap-1">
+              <fa-icon
+                [icon]="faEdit"
+                class="text-yellow-500 text-lg cursor-pointer py-0.5 px-2 rounded-full hover:bg-black hover:bg-opacity-10"
+                (click)="table.onEdit ? table.onEdit(i) : undefined"
+              />
+              <fa-icon
+                [icon]="faRemove"
+                class="text-red-500 text-lg cursor-pointer py-0.5 px-2 rounded-full hover:bg-black hover:bg-opacity-10"
+                (click)="table.onRemove ? table.onRemove(i) : undefined"
+              />
+            </span>
+          </ng-template>
         </td>
       </tr>
     </tbody>
