--- a/src/app/modules/admin/pages/home/pages/users/users.component.html
+++ b/src/app/modules/admin/pages/home/pages/users/users.component.html
@@ -21,12 +21,6 @@
     </div>
   </div>
 </section>
-<aside
-  class="fixed w-72 top-16 right-0 bottom-0 bg-white drop-shadow-xl py-5 ease-in duration-200"
-  [ngClass]="{ 'translate-x-full': !showSideBar() }"
->
-  <h4 class="text-xl text-gray-800 font-medium px-5 mb-3">
-    Registro de usuario
-  </h4>
+<app-sidebar headline="Registro de usuario" [showSideBar]="showSideBar()">
   <app-new-user-form (onCancel)="cancelRegister()" />
-</aside>
+</app-sidebar>
