--- a/src/app/modules/admin/pages/home/pages/platforms/platforms.component.html
+++ b/src/app/modules/admin/pages/home/pages/platforms/platforms.component.html
@@ -2,17 +2,24 @@
   hTitle="Plataformas"
   hDescription="Ten control absoluto de todas las plataformas a las que quieres administrar
 sus saldos y transferencias"
-></app-header-title>
+/>
 <section class="border-2 border-neutral-300 rounded-md px-5 pt-5 pb-6">
   <h3 class="text-xl text-gray-700 mb-3">Registrar nueva plataforma</h3>
-  <app-new-platform-form></app-new-platform-form>
+  <app-new-platform-form />
 </section>
 <section class="mt-10">
   <h3 class="text-2xl text-gray-700 font-medium mb-3">
     Listado de plataformas registradas
   </h3>
   <div class="px-5 pt-5 pb-6 bg-white rounded-lg drop-shadow-lg">
-    <app-spinner *ngIf="loading()"></app-spinner>
-    <app-platforms-table *ngIf="!loading()"></app-platforms-table>
+    <app-spinner *ngIf="loading()" />
+    <app-platforms-table *ngIf="!loading()" (onEdit)="onEdit($event)" />
   </div>
 </section>
+<app-sidebar
+  headline="Actualización de plataforma"
+  [showSideBar]="showSideBar"
+  actionName="Actualizar"
+  (onSubmit)="onUpdate()"
+  ><app-update-platform-form />
+</app-sidebar>
