design: update platform form

--- a/src/app/modules/admin/pages/home/pages/platforms/components/update-platform-form/update-platform-form.component.html
+++ b/src/app/modules/admin/pages/home/pages/platforms/components/update-platform-form/update-platform-form.component.html
@@ -1,1 +1,6 @@
-<p>update-platform-form works!</p>
+<form class="form">
+  <div class="control">
+    <label for="name">Nombre</label>
+    <input type="text" id="name" class="input" />
+  </div>
+</form>
