--- a/src/app/modules/admin/pages/home/pages/platforms/components/update-platform-form/update-platform-form.component.html
+++ b/src/app/modules/admin/pages/home/pages/platforms/components/update-platform-form/update-platform-form.component.html
@@ -1,6 +1,7 @@
-<form class="form">
+<form class="form" [formGroup]="form" (ngSubmit)="onSubmit()">
   <div class="control">
     <label for="name">Nombre</label>
-    <input type="text" id="name" class="input" />
+    <input type="text" id="name" class="input" formControlName="name" />
   </div>
+  <input type="submit" value="submit" class="sr-only" />
 </form>
