--- a/src/app/modules/admin/pages/home/pages/cash-registers/components/new-cash-register-form/new-cash-register-form.component.html
+++ b/src/app/modules/admin/pages/home/pages/cash-registers/components/new-cash-register-form/new-cash-register-form.component.html
@@ -20,6 +20,6 @@
     />
   </div>
   <app-button type="submit" [loading]="loading()" class="mt-3"
-    >Registrar caja registradora</app-button
+    >Registrar Caja Registradora</app-button
   >
 </form>
