--- a/src/app/modules/admin/pages/home/pages/users/users.component.html
+++ b/src/app/modules/admin/pages/home/pages/users/users.component.html
@@ -25,6 +25,7 @@
   headline="Registro de usuario"
   [showSideBar]="showSideBar"
   actionName="Registrar"
+  mode="register"
 >
   <app-new-user-form (onCancel)="cancelRegister()" />
 </app-sidebar>
