--- a/src/app/modules/admin/pages/administration/pages/safes/safes.component.html
+++ b/src/app/modules/admin/pages/administration/pages/safes/safes.component.html
@@ -1,7 +1,12 @@
-<!--header class="mb-3">
-  <h3 class="text-xl text-gray-700 font-medium">Cajas Fuertes</h3>
-</header-->
-<ul class="grid grid-cols-[repeat(auto-fit,_minmax(16rem,_1fr))] gap-5">
+<ng-template #noDetails>
+  <p class="text-center text-2xl text-gray-700 py-24">
+    No se encontraron cajas fuertes activas
+  </p>
+</ng-template>
+<ul
+  class="grid grid-cols-[repeat(auto-fit,_minmax(16rem,_1fr))] gap-5"
+  *ngIf="safeDetails().length > 0; else noDetails"
+>
   <li *ngFor="let detail of safeDetails(); index as i">
     <app-adm-item-card
       [showDropdown]="showDropdown() === i"
