--- a/src/app/modules/admin/pages/home/pages/safes/components/new-safe-form/new-safe-form.component.html
+++ b/src/app/modules/admin/pages/home/pages/safes/components/new-safe-form/new-safe-form.component.html
@@ -1,14 +1,14 @@
 <form class="form" [formGroup]="form" (ngSubmit)="onSubmit()">
   <div class="control">
     <label for="numeral">Número de caja</label>
-    <div class="flex items-center gap-7">
+    <div class="grid grid-cols-[1fr_14rem] gap-7">
       <input
         type="number"
-        class="input w-full"
+        class="input"
         id="numeral"
         formControlName="numeral"
       />
-      <app-button type="submit">Registrar</app-button>
+      <app-button type="submit">Registrar caja fuerte</app-button>
     </div>
   </div>
 </form>
