--- a/src/app/modules/admin/pages/home/pages/users/components/new-user-form/new-user-form.component.html
+++ b/src/app/modules/admin/pages/home/pages/users/components/new-user-form/new-user-form.component.html
@@ -1,4 +1,4 @@
-<form class="form px-5" [formGroup]="form" (ngSubmit)="onSubmit()">
+<form class="form" [formGroup]="form" (ngSubmit)="emitOnComplete()">
   <div class="control">
     <label for="name">Nombre</label>
     <input
@@ -41,25 +41,11 @@
   </div>
   <div class="control">
     <label for="role">Rol de usuario</label>
-    <select
-      id="role"
-      formControlName="role"
-      [disabled]="loading()"
-      class="input"
-    >
+    <select id="role" formControlName="role" class="input">
       <option value="CASHIER">CAJERO</option>
       <option value="SUPERVISOR">SUPERVISOR</option>
       <option value="ADMIN">ADMINISTRADOR</option>
     </select>
   </div>
-  <section class="mt-3 flex flex-col gap-3">
-    <app-button type="submit" [loading]="loading()">Registrar</app-button>
-    <app-button
-      type="button"
-      color="neutral"
-      [disabled]="loading()"
-      (click)="emitOnCancel()"
-      >Cancelar</app-button
-    >
-  </section>
+  <input type="submit" value="submit" class="sr-only" />
 </form>
