--- a/src/app/modules/portal/pages/home/pages/transactions/components/new-transaction-form/new-transaction-form.component.html
+++ b/src/app/modules/portal/pages/home/pages/transactions/components/new-transaction-form/new-transaction-form.component.html
@@ -1,8 +1,16 @@
 <form class="form" [formGroup]="form" (ngSubmit)="onSubmit()">
+  <datalist id="descriptions">
+    <option
+      *ngFor="let transaction of transactions()"
+      [value]="transaction.description"
+    >
+      {{ transaction.description }}
+    </option>
+  </datalist>
   <div class="relative control">
     <label for="description">Nota</label>
     <input
-      type="text"
+      list="descriptions"
       class="input"
       id="description"
       formControlName="description"
@@ -44,5 +52,7 @@
     <label for="time">Hora</label>
     <input type="time" id="time" class="input" formControlName="date" />
   </div>
-  <app-button type="submit" class="mt-3">Guardar Transacción</app-button>
+  <app-button type="submit" class="mt-3" [loading]="loading()"
+    >Guardar Transacción</app-button
+  >
 </form>
