--- a/src/app/modules/portal/portal.component.html
+++ b/src/app/modules/portal/portal.component.html
@@ -1,7 +1,7 @@
 <app-header />
 <app-portal-navbar />
 <main
-  class="ml-56 mt-16 w-[calc(100%-14rem)] min-h-[calc(100vh-4rem)] px-6 pb-5"
+  class="lg:ml-56 mt-16 lg:w-[calc(100%-14rem)] min-h-[calc(100vh-4rem)] px-6 pb-5"
 >
   <router-outlet />
 </main>
