--- a/src/app/modules/shared/components/nav/nav.component.html
+++ b/src/app/modules/shared/components/nav/nav.component.html
@@ -1,5 +1,5 @@
 <nav
-  class="w-56 h-[calc(100vh-4rem)] fixed z-40 px-5 py-5 left-0 top-16 bottom-0 bg-violet-200 text-gray-700 flex flex-col justify-between"
+  class="hidden lg:w-56 h-[calc(100vh-4rem)] lg:fixed z-40 px-5 py-5 lg:left-0 lg:top-16 lg:bottom-0 bg-violet-200 text-gray-700 lg:flex flex-col justify-between"
 >
   <ul class="flex flex-col gap-5">
     <li *ngFor="let route of routes(); index as i">
