--- a/src/app/modules/portal/pages/home/pages/transactions/components/update-transaction-detail-form/update-transaction-detail-form.component.html
+++ b/src/app/modules/portal/pages/home/pages/transactions/components/update-transaction-detail-form/update-transaction-detail-form.component.html
@@ -22,5 +22,9 @@
     <label for="update-date">Hora</label>
     <input type="time" id="update-date" class="input" />
   </div>
+  <div class="control">
+    <label for="temp-code">Código</label>
+    <input type="password" id="temp-code" class="input" />
+  </div>
   <input type="submit" class="sr-only" />
 </form>
