add: transactions list to update transaction detail form

--- a/src/app/modules/portal/pages/home/pages/transactions/components/update-transaction-detail-form/update-transaction-detail-form.component.html
+++ b/src/app/modules/portal/pages/home/pages/transactions/components/update-transaction-detail-form/update-transaction-detail-form.component.html
@@ -1,7 +1,15 @@
 <form role="form" class="form">
+  <datalist id="transactions">
+    <option
+      *ngFor="let transaction of transactions"
+      [value]="transaction.description"
+    >
+      {{ transaction.description }}
+    </option>
+  </datalist>
   <div class="control">
     <label for="update-description">Nota</label>
-    <input type="text" id="update-description" class="input" />
+    <input list="transactions" id="update-description" class="input" />
   </div>
   <div class="control">
     <label for="update-type">Tipo</label>
