--- a/src/app/modules/portal/pages/home/pages/transactions/transactions.component.html
+++ b/src/app/modules/portal/pages/home/pages/transactions/transactions.component.html
@@ -17,5 +17,5 @@
   mode="update"
   [showSideBar]="showSideBar"
 >
-  <app-update-transaction-detail-form />
+  <app-update-transaction-detail-form [transactions]="transactions()" />
 </app-sidebar>
