--- a/src/app/modules/shared/components/sidebar/sidebar.component.html
+++ b/src/app/modules/shared/components/sidebar/sidebar.component.html
@@ -1,17 +1,17 @@
 <aside
-  class="fixed w-[24rem] top-16 right-0 bottom-0 bg-white drop-shadow-xl py-5 px-5 ease-in duration-200 flex flex-col justify-between"
+  class="fixed w-[24rem] top-16 right-0 bottom-0 bg-white drop-shadow-xl py-5 px-5 ease-in duration-200 grid grid-rows-[40px_1fr_128px]"
   [ngClass]="{ 'translate-x-full': !showSideBar() }"
 >
-  <div class="w-full">
-    <header class="mb-3">
-      <h4 class="text-2xl text-gray-700 font-medium">
-        {{ headline }}
-      </h4>
-    </header>
+  <header class="mb-3">
+    <h4 class="text-2xl text-gray-700 font-medium">
+      {{ headline }}
+    </h4>
     <div class="divider my-3"></div>
+  </header>
+  <div class="overflow-y-auto pt-5 pb-7 px-3">
     <ng-content></ng-content>
   </div>
-  <div class="w-full flex flex-col items-center gap-3">
+  <div class="flex flex-col items-center gap-3">
     <p class="text-gray-500 flex items-center justify-center gap-3">
       <span class="inline-block w-14 h-px bg-gray-500"></span>
       Modo {{ modeTitle }}
