--- a/src/app/modules/portal/pages/home/pages/transactions/components/update-transaction-detail-form/update-transaction-detail-form.component.html
+++ b/src/app/modules/portal/pages/home/pages/transactions/components/update-transaction-detail-form/update-transaction-detail-form.component.html
@@ -52,6 +52,7 @@
       id="temp-code"
       class="input"
       formControlName="tempcode"
+      autocomplete="off"
     />
   </div>
   <input type="submit" class="sr-only" />
