--- a/src/app/modules/shared/components/temp-code-form/temp-code-form.component.html
+++ b/src/app/modules/shared/components/temp-code-form/temp-code-form.component.html
@@ -6,6 +6,7 @@
       id="delete-tempcode"
       formControlName="tempCode"
       class="input"
+      autocomplete="off"
     />
   </div>
   <input type="submit" value="submit" class="sr-only" />
